--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     depends_on:
       - postgres
       - redis
-
+    volumes:
+      - ./logs:/app/logs
 
 volumes:
   postgres-data:
