--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,10 @@
         </dependency>
 
         <!-- Cloud -->
-        <dependency>
-            <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-aws-starter-sqs</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.awspring.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-aws-starter-sqs</artifactId>-->
+<!--        </dependency>-->
 	</dependencies>
 
     <dependencyManagement>
