Fix authentication page: session stored in Redis. formLogin() & authsuccessHandler. Remove login() in authService. UserDetail for authManager to authenticate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ server:
         same-site: none
         secure: true
 
+app:
+  security:
+    login-success-url: http://10.1.11.26:3000/ok
 
 spring:
   application:
